[package]
name = "fnord-status"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
env_logger = "0.10.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.17"
rand = "0.8.5"
serde_json = "1.0.96"
sha3 = "0.10.8"
spaceapi = "0.9.0"
teloxide = { version = "0.12.2", features = ["rustls"] }
tokio = { version = "1.28.1", features = ["full"] }

